--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
       <div id="title" class="row">
   	    <h1 class="text-info"><%= title %></h1>
         <p><%= title %> は <a href="http://nodejs.org/" target="_blank">node.js</a> を用いたリアルタイムお絵かきチャットのサンプルアプリです。作成者: <a href="https://twitter.com/tsujimotter" target="_blank">@tsujimotter</a></p>
-        <p>github: <a href="https://github.com/junpeitsuji/paintchat" target="_blank">https://github.com/junpeitsuji/paintchat</p>
+        <p>github: <a href="https://github.com/junpeitsuji/paintchat" target="_blank">https://github.com/junpeitsuji/paintchat</a></p>
       </div>
       <div id="canvas" class="row">
         <h3>canvas</h3>
