add canvas download url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,9 @@
         <pre>http://localhost/paint</pre>
         <canvas id="myCanvas" width="960" height="480">
         </canvas>
+        <span id="canvasCopy">
+        </span>
+        <button id="save" class="btn btn-large btn-primary">キャンバスを保存</button>
         <button id="delete" class="btn btn-large btn-danger">削除</button>
       </div>
       <div id="chat" class="row">
