--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
+    <link rel='stylesheet' href='/bootstrap/css/bootstrap-responsive.min.css' />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/javascripts/canvas.js"></script>
@@ -19,35 +20,43 @@
     </style>
   </head>
   <body>
+      
     <div class="container">
-      <div id="title" class="row">
-  	    <h1 class="text-info"><%= title %></h1>
-        <p><%= title %> は <a href="http://nodejs.org/" target="_blank">node.js</a> を用いたリアルタイムお絵かきチャットのサンプルアプリです。作成者: <a href="https://twitter.com/tsujimotter" target="_blank">@tsujimotter</a></p>
-        <p>github: <a href="https://github.com/junpeitsuji/paintchat" target="_blank">https://github.com/junpeitsuji/paintchat</a></p>
-      </div>
-      <div id="canvas" class="row">
-        <h3>canvas</h3>
-        <pre>http://localhost/paint</pre>
-        <canvas id="myCanvas" width="960" height="480">
-        </canvas>
-        <span id="canvasCopy">
-        </span>
-        <button id="save" class="btn btn-large btn-primary">キャンバスを保存</button>
-        <button id="delete" class="btn btn-large btn-danger">キャンパスをクリア</button>
-      </div>
-      <div id="chat" class="row">
-        <h3>chat</h3>
-        <pre>http://localhost/chat</pre>
-        <span class="form-inline">
-          <input class="input-xxlarge" type="text" name="message" id="message" />
-          <button id="submit" class="btn btn-primary">送信</button>
-          <button id="delete" class="btn btn-danger">削除</button>
-        </span>
-        <dl id="list"></dl>
-      </div>
-      <div id="image" class="row">
-        <h3>canvas histories</h3>
-        <div id="list" class="row">
+      <div class="row">
+        <h1 class="text-info"><%= title %></h1>
+        <p><%= title %> は <a href="http://nodejs.org/" target="_blank">node.js</a> を用いたリアルタイムお絵かきチャットのサンプルアプリです。　github: <a href="https://github.com/junpeitsuji/paintchat" target="_blank">https://github.com/junpeitsuji/paintchat</a></p>
+      </div>      
+      <div class="row">
+        <div id="canvas" class="span9">
+          <div class="row">
+            <h3>canvas</h3>
+          </div>
+          <div class="row">
+            <canvas id="myCanvas" width="720" height="480"></canvas>
+          </div>
+          <div class="row">
+            <button id="save" class="btn btn-large btn-primary">キャンバスを保存</button>
+            <button id="delete" class="btn btn-large btn-danger">キャンパスをクリア</button>
+          </div>
+          <div class="row">
+            <h4>保存したキャンバスの画像</h4>
+          </div>
+          <div class="row">
+            <div id="image">
+              <ul id="list" class="thumbnails">
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="chat" class="span3">
+          <h3>chat</h3>
+          <span class="form-inline">
+            <input class="input-large" type="text" name="message" id="message" />
+            <button id="submit" class="btn btn-primary">送信</button>
+            <button id="delete" class="btn btn-danger">削除</button>
+          </span>
+          <h4>チャット履歴</h4>
+          <dl id="list"></dl>
         </div>
       </div>
     </div>
