--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,7 @@
     }
     #header {
       border-bottom: solid 1px #999;
-      padding-top:8px;
-      padding-bottom:8px;
+      padding:8px 0px 8px 0px;
       margin-bottom:16px;
     }
     #header #title{
