--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/bootstrap/css/bootstrap-responsive.min.css' />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/javascripts/canvas.js"></script>
     <script type="text/javascript" src="/javascripts/chat.js"></script>
@@ -41,6 +41,12 @@
     #chat-history-title {
       padding-top:24px;
       border-bottom: solid 1px #999;
+    }
+    .thumbnail-icon-trash {
+      float: right;
+    }
+    .thumbnail-title {
+      float: left;
     }
     </style>
   </head>
@@ -82,8 +88,8 @@
         <div id="chat" class="span3">
           <h3>テキストチャット</h3>
           <div id="chat-form">
+            <input class="input-large" type="text" name="message" id="message" />
             <span class="form-inline">
-              <input class="input-large" type="text" name="message" id="message" />
               <button id="submit" class="btn btn-primary">送信</button>
               <button id="delete" class="btn btn-danger">削除</button>
             </span>
