チャットの全削除機能を廃止

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,12 +116,10 @@
           <div class="row">
             <div id="chat-form" class="span3">
               <div id="chat-form-box" class="row">
-                <span class="span3">
-                  <input class="input-large" type="text" name="message" id="message" />
-                </span>
                 <span class="span3 form-inline">
+                  <input class="input-medium" type="text" name="message" id="message" />
                   <button id="submit" class="btn btn-primary">送信</button>
-                  <button id="delete" class="btn btn-danger">削除</button>
+                  <!-- <button id="delete" class="btn btn-danger">削除</button> -->
                 </span>
               </div>
             </div>
