入退室通知機能を付けました

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,13 +36,16 @@
     #chat-form {
       background-color: #eee;
       border: solid 1px #999;
-      margin-bottom: 24px;
+
+      margin-bottom: 8px;
       /* padding: 8px 8px 8px 8px; */
     }
     #chat-form-box {
       padding: 8px 8px 8px 8px;
     }
     #chat-history-title {
+
+      margin-top: 24px;
       border-bottom: solid 1px #999;
     }
     #chat li {
@@ -124,6 +127,8 @@
               </div>
             </div>
           </div>
+          <p id="chat-alert" class="alert alert-info" style="display: none;">
+          </p>
           <div id="chat-history-title">
             <h4>チャット履歴</h4>
           </div>
