人数のカウントをできるようにしました

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,9 @@
     #chat-form-box {
       padding: 8px 8px 8px 8px;
     }
+    #chat-alert {
+      margin-top: 24px;
+    }
     #chat-history-title {
 
       margin-top: 24px;
@@ -127,6 +130,8 @@
               </div>
             </div>
           </div>
+          <p id="chat-user-count" class="pull-right">
+          </p>
           <p id="chat-alert" class="alert alert-info" style="display: none;">
           </p>
           <div id="chat-history-title">
