チャットと保存画像の最大取得件数を設定

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,7 +107,7 @@
           </div>
           <div id="canvas-stored">
             <div class="row">
-              <h4>保存したキャンバスの画像</h4>
+              <h4>保存したキャンバスの画像 (<%= page_limit %> 件)</h4>
             </div>
             <div class="row">
               <div id="image">
@@ -135,7 +135,7 @@
           <p id="chat-alert" class="alert alert-info" style="display: none;">
           </p>
           <div id="chat-history-title">
-            <h4>チャット履歴</h4>
+            <h4>チャット履歴 (<%= page_limit %> 件)</h4>
           </div>
           <ul id="list" class="row"></ul>
           <!--
