--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <style type="text/css">
     canvas {
       border: solid 1px #999;
+      cursor: crosshair;
     }
     #header {
       border-bottom: solid 1px #999;
