かっこいいので、Githubのリンクリボンをトップページにつけた。かっこいいので。

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,13 +84,13 @@
     </style>
   </head>
   <body>
-      
+      <a href="https://github.com/junpeitsuji/paintchat" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div class="container">
       <div id="header" class="row">
         <div id="title">
           <h1 class="text-info"><%= title %></h1>
         </div>
-        <p><%= title %> は <a href="http://nodejs.org/" target="_blank">node.js</a> を用いたリアルタイムお絵かきチャットのサンプルアプリです。　github: <a href="https://github.com/junpeitsuji/paintchat" target="_blank">https://github.com/junpeitsuji/paintchat</a></p>
+        <p><%= title %> は <a href="http://nodejs.org/" target="_blank">node.js</a> を用いたリアルタイムお絵かきチャットのサンプルアプリです。</p>
       </div>      
       <div class="row">
         <div id="canvas" class="span9">
